[tool.poetry]
name = "webtronics-mini-blog"
version = "0.1.0"
description = "test_case"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.46"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
pydantic = "^1.10.4"
alembic = "^1.9.2"

[tool.poetry.dev-dependencies]
black = "22.12.0"
flake8 = "6.0.0"
pyproject-flake8 = "6.0.0.post1"
flake8-black = "0.3.6"
flake8-builtins = "2.1.0"
flake8-import-order = "0.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
exclude = """
    ('
    |.idea/
    |.venv/
    |.vscode/
    ')
"""

# call using pflake8
[tool.flake8]
max-line-length = 100
max-complexity = 8
ignore = "A003, W503"
exclude = """
    .idea/
    .venv/
    .vscode/
    */migrations/
"""

[virtualenvs]
create = true
in-project = true
path = ".venv"
